[workspace]
members = [
	"benches",
	"client/http-client",
	"client/transport",
	"client/wasm-client",
	"client/ws-client",
	"core",
	"examples",
	"jsonrpsee",
	"proc-macros",
	"server",
	"test-utils",
	"tests",
	"tests/wasm-tests",
	"types",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
version = "0.20.0"
edition = "2021"
rust-version = "1.64.0"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee"
homepage = "https://www.parity.io/"
keywords = ["jsonrpc", "json", "http", "websocket", "WASM"]
readme = "README.md"

[workspace.dependencies]
jsonrpsee-types = { path = "types", version = "0.20.0" }
jsonrpsee-core = { path = "core", version = "0.20.0" }
jsonrpsee-server = { path = "server", version = "0.20.0" }
jsonrpsee-ws-client = { path = "client/ws-client", version = "0.20.0" }
jsonrpsee-http-client = { path = "client/http-client", version = "0.20.0" }
jsonrpsee-wasm-client = { path = "client/wasm-client", version = "0.20.0" }
jsonrpsee-client-transport = { path = "client/transport", version = "0.20.0" }
jsonrpsee-proc-macros = { path = "proc-macros", version = "0.20.0" }
