[workspace]
members = [
	"benches",
	"client/http-client",
	"client/transport",
	"client/wasm-client",
	"client/ws-client",
	"core",
	"examples",
	"jsonrpsee",
	"proc-macros",
	"server",
	"test-utils",
	"tests",
	"tests/wasm-tests",
	"tests/proc-macro-core",
	"types",
]
resolver = "2"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
version = "0.24.7"
edition = "2021"
rust-version = "1.74.1"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee"
homepage = "https://www.parity.io/"
keywords = ["jsonrpc", "json", "http", "websocket", "WASM"]
readme = "README.md"

[workspace.dependencies]
# Internal jsonrpsee crates
jsonrpsee-types = { path = "types", version = "0.24.7" }
jsonrpsee-core = { path = "core", version = "0.24.7" }
jsonrpsee-server = { path = "server", version = "0.24.7" }
jsonrpsee-ws-client = { path = "client/ws-client", version = "0.24.7" }
jsonrpsee-http-client = { path = "client/http-client", version = "0.24.7" }
jsonrpsee-wasm-client = { path = "client/wasm-client", version = "0.24.7" }
jsonrpsee-client-transport = { path = "client/transport", version = "0.24.7" }
jsonrpsee-proc-macros = { path = "proc-macros", version = "0.24.7" }

# Deps used by the jsonrpsee crates.
async-trait = "0.1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes = "1.6"
futures-util = { version = "0.3.14", default-features = false }
futures-channel = { version = "0.3.14", default-features = false }
futures-timer = "3"
gloo-net = { version = "0.6.0", default-features = false }
heck = "0.5.0"
http = "1"
http-body = "1"
http-body-util = "0.1.0"
hyper = "1.5"
hyper-rustls = { version = "0.27", default-features = false }
hyper-util = "0.1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "raw_value"] }
soketto = "0.8.1"
syn = { version = "2", default-features = false }
thiserror = "2"
tokio = "1.23.1"
tower = "0.5"
tower-http = "0.6"
tokio-util = "0.7"
tokio-stream = "0.1.7"
tokio-rustls = { version = "0.26", default-features = false }
tracing = "0.1.34"
rustc-hash = "2"
rand = "0.8"
parking_lot = "0.12"
rustls-pki-types = "1"
rustls-platform-verifier =  "0.4"
rustls = { version = "0.23", default-features = false }
pin-project = "1.1.3"
proc-macro2 = "1"
proc-macro-crate = "3"
route-recognizer = "0.3.1"
url = "2.4"
quote = "1"
wasm-bindgen-futures = "0.4.19"

# Dev dependencies
anyhow = "1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
console-subscriber = "0.4"
fast-socks5 = "0.9.1"
futures = { version = "0.3.14", default-features = false, features = ["std"] }
socket2 = "0.5.1"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1.0.97"