[workspace]
members = [
	"benches",
	"client/http-client",
	"client/transport",
	"client/wasm-client",
	"client/ws-client",
	"core",
	"examples",
	"jsonrpsee",
	"proc-macros",
	"server",
	"test-utils",
	"tests",
	"tests/wasm-tests",
	"tests/proc-macro-core",
	"types",
]
resolver = "3"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
version = "0.25.1"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee"
homepage = "https://www.parity.io/"
keywords = ["jsonrpc", "json", "http", "websocket", "WASM"]
readme = "README.md"

[workspace.dependencies]
# Internal jsonrpsee crates
jsonrpsee-client-transport = { path = "client/transport", version = "0.25.1" }
jsonrpsee-core = { path = "core", version = "0.25.1" }
jsonrpsee-http-client = { path = "client/http-client", version = "0.25.1" }
jsonrpsee-proc-macros = { path = "proc-macros", version = "0.25.1" }
jsonrpsee-server = { path = "server", version = "0.25.1" }
jsonrpsee-types = { path = "types", version = "0.25.1" }
jsonrpsee-wasm-client = { path = "client/wasm-client", version = "0.25.1" }
jsonrpsee-ws-client = { path = "client/ws-client", version = "0.25.1" }

# Deps used by the jsonrpsee crates.
async-trait = "0.1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes = "1.6"
futures-channel = { version = "0.3.14", default-features = false }
futures-timer = "3"
futures-util = { version = "0.3.14", default-features = false }
gloo-net = { version = "0.6.0", default-features = false }
heck = "0.5.0"
http = "1"
http-body = "1"
http-body-util = "0.1.0"
hyper = "1.5"
hyper-rustls = { version = "0.27", default-features = false }
hyper-util = "0.1"
parking_lot = "0.12"
pin-project = "1.1.3"
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
route-recognizer = "0.3.1"
rustc-hash = "2"
rustls = { version = "0.23", default-features = false }
rustls-pki-types = "1"
rustls-platform-verifier = "0.6"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "raw_value"] }
soketto = "0.8.1"
syn = { version = "2", default-features = false }
thiserror = "2"
tokio = "1.42"
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = "0.1.7"
tokio-util = "0.7"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1.34"
url = "2.4"
wasm-bindgen-futures = "0.4.19"

# Dev dependencies
anyhow = "1"
console-subscriber = "0.4"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
fast-socks5 = "0.10"
futures = { version = "0.3.14", default-features = false, features = ["std"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
socket2 = "0.5.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1.0.97"

[workspace.lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
missing_docs = { level = "warn", priority = -1 }
missing_debug_implementations = { level = "warn", priority = -1 }
missing_copy_implementations = { level = "warn", priority = -1 }

[workspace.lints.clippy]
manual_async_fn = { level = "allow", priority = -1 }
