[package]
name = "jsonrpsee-benchmarks"
version = "0.16.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Benchmarks for jsonrpsee"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
futures-channel = "0.3.15"
futures-util = "0.3.15"
jsonrpsee = { path = "../jsonrpsee", features = ["server"] }
jsonrpsee_v0_15 = { package = "jsonrpsee", version = "=0.15.1", features = ["http-client", "ws-client", "client-ws-transport"] }
jsonrpc-ws-server = { version = "18.0.0", optional = true }
jsonrpc-http-server = { version = "18.0.0", optional = true }
jsonrpc-pubsub = { version = "18.0.0", optional = true }
num_cpus = "1"
serde_json = "1"
tokio = { version = "1.16", features = ["rt-multi-thread"] }
console-subscriber = "0.1.8"

[[bench]]
name = "bench"
path = "bench.rs"
harness = false

[features]
# Run benchmarks against servers in https://github.com/paritytech/jsonrpc/
jsonrpc-crate = ["jsonrpc-ws-server", "jsonrpc-http-server", "jsonrpc-pubsub"]
