[package]
name = "jsonrpsee-benchmarks"
description = "Benchmarks for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
futures-util = "0.3.15"
jsonrpsee = { path = "../jsonrpsee", features = ["server"] }
jsonrpsee_v0_20 = { package = "jsonrpsee", version = "=0.20.0", features = ["ws-client", "client-ws-transport-native-tls"] }
# Disable TLS for benches
jsonrpsee_v0_20_http_client = { package = "jsonrpsee-http-client", version = "=0.20.0", default-features = false }
jsonrpc-ws-server = { version = "18.0.0", optional = true }
jsonrpc-http-server = { version = "18.0.0", optional = true }
jsonrpc-pubsub = { version = "18.0.0", optional = true }
serde_json = "1"
tokio = { version = "1.16", features = ["rt-multi-thread"] }
console-subscriber = "0.1.8"

[[bench]]
name = "bench"
path = "bench.rs"
harness = false

[features]
# Run benchmarks against servers in https://github.com/paritytech/jsonrpc/
jsonrpc-crate = ["jsonrpc-ws-server", "jsonrpc-http-server", "jsonrpc-pubsub"]
