[package]
name = "jsonrpsee-core"
description = "Utilities for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
async-trait = { workspace = true }
jsonrpsee-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tracing = { workspace = true }

# optional deps
futures-util = { workspace = true, optional = true }
http = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
futures-timer = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true, optional = true }

[features]
default = []
http-helpers = ["bytes", "futures-util", "http-body", "http-body-util", "http"]
server = ["futures-util/alloc", "rustc-hash/std", "parking_lot", "rand", "tokio/rt", "tokio/sync", "tokio/macros", "tokio/time", "tower", "http"]
client = ["futures-util/sink", "tokio/sync", "tower"]
async-client = [
	"client",
	"futures-util/alloc",
	"rustc-hash",
	"tokio/macros",
	"tokio/rt",
	"tokio/time",
	"futures-timer",
	"tokio-stream",
	"pin-project",
]
async-wasm-client = [
	"client",
	"futures-util/alloc",
	"wasm-bindgen-futures",
	"rustc-hash/std",
	"futures-timer/wasm-bindgen",
	"tokio/macros",
	"tokio/time",
	"pin-project",
]

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
jsonrpsee = { path = "../jsonrpsee", features = ["server", "macros"] }
http-body-util = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
