[package]
name = "jsonrpsee-examples"
description = "Examples for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
anyhow = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
futures = { workspace = true }
jsonrpsee = { path = "../jsonrpsee", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client", "client-legacy"]}
console-subscriber = { workspace = true }