[package]
name = "jsonrpsee-http-client"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "HTTP client for JSON-RPC"
edition = "2018"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee-http-client"

[dependencies]
async-trait = "0.1"
fnv = "1"
hyper = { version = "0.14.10", features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.23", features = ["webpki-tokio"] }
jsonrpsee-types = { path = "../types", version = "0.6.0" }
jsonrpsee-utils = { path = "../utils", version = "0.6.0", features = ["client", "http-helpers"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.8", features = ["time"] }
tracing = "0.1"
url = "2.2"

[dev-dependencies]
jsonrpsee-test-utils = { path = "../test-utils" }
tokio = { version = "1.8", features = ["net", "rt-multi-thread", "macros"] }
