[package]
name = "jsonrpsee-http-server"
version = "0.4.1"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "HTTP server for JSON-RPC"
edition = "2018"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee-http-server"

[dependencies]
hyper = { version = "0.14.10", features = ["server", "http1", "http2", "tcp"] }
futures-channel = "0.3.14"
futures-util = { version = "0.3.14", default-features = false }
jsonrpsee-types = { path = "../types", version = "0.4.1" }
jsonrpsee-utils = { path = "../utils", version = "0.4.1", features = ["server", "http-helpers"] }
globset = "0.4"
lazy_static = "1.4"
tracing = "0.1"
tracing-futures = "0.2.5"
serde_json = "1"
socket2 = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
unicase = "2.6.0"

[dev-dependencies]
env_logger = "0.9"
jsonrpsee-test-utils = { path = "../test-utils" }
jsonrpsee = { path = "../jsonrpsee", features = ["full"] }
