[package]
name = "jsonrpsee-http-server"
version = "0.14.0"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "HTTP server for JSON-RPC"
edition = "2021"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee-http-server"

[dependencies]
hyper = { version = "0.14.10", features = ["server", "http1", "http2", "tcp"] }
futures-channel = "0.3.14"
futures-util = { version = "0.3.14", default-features = false }
jsonrpsee-types = { path = "../types", version = "0.14.0" }
jsonrpsee-core = { path = "../core", version = "0.14.0", features = ["server", "http-helpers"] }
tracing = "0.1"
serde_json = { version = "1.0", features = ["raw_value"] }
serde = "1"
tokio = { version = "1.16", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
jsonrpsee-test-utils = { path = "../test-utils" }
jsonrpsee = { path = "../jsonrpsee", features = ["full"] }
socket2 = "0.4"
