[package]
name = "jsonrpsee-http"
description = "HTTP client and server for jsonrpsee"
version = "1.0.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.2.0"
derive_more = "0.13.0"
err-derive = "0.1.5"
fnv = "1.0"
futures = "0.3.1"
futures-timer = "2.0.2"
hyper = { version = "0.13.0", features = ["stream"] }
jsonrpsee-core = { path = "../core" }
jsonrpsee-server-utils = { path = "../server-utils" }
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0.40", features = ["derive"] }
serde_json = "1.0.40"
tokio = "0.2.4"
unicase = "2.0"

[dev-dependencies]
rand = "0.7"
