[package]
name = "jsonrpsee"
description = "JSON-RPC crate"
version = "0.16.3"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee"

[dependencies]
# No support for namespaced features yet so workspace dependencies are prefixed with `jsonrpsee-`.
# See https://github.com/rust-lang/cargo/issues/5565 for more details.
jsonrpsee-http-client = { path = "../client/http-client", version = "0.16.3", optional = true }
jsonrpsee-ws-client = { path = "../client/ws-client", version = "0.16.3", optional = true }
jsonrpsee-wasm-client = { path = "../client/wasm-client", version = "0.16.3", optional = true }
jsonrpsee-client-transport = { path = "../client/transport", version = "0.16.3", optional = true }
jsonrpsee-server = { path = "../server", version = "0.16.3", optional = true }
jsonrpsee-proc-macros = { path = "../proc-macros", version = "0.16.3", optional = true }
jsonrpsee-core = { path = "../core", version = "0.16.3", optional = true }
jsonrpsee-types = { path = "../types", version = "0.16.3", optional = true }
tracing = { version = "0.1.34", optional = true }

[features]
client-ws-transport = ["jsonrpsee-client-transport/ws", "jsonrpsee-client-transport/tls"]
client-ws-transport-no-tls = ["jsonrpsee-client-transport/ws"]
client-web-transport = ["jsonrpsee-client-transport/web"]
async-client = ["jsonrpsee-core/async-client"]
async-wasm-client = ["jsonrpsee-core/async-wasm-client"]
http-client = ["jsonrpsee-http-client", "jsonrpsee-types", "jsonrpsee-core/client"]
wasm-client = ["jsonrpsee-wasm-client", "jsonrpsee-types", "jsonrpsee-core/client"]
ws-client = ["jsonrpsee-ws-client", "jsonrpsee-types", "jsonrpsee-core/client"]
macros = ["jsonrpsee-proc-macros", "jsonrpsee-types", "tracing"]

client = ["http-client", "ws-client", "wasm-client", "client-ws-transport", "client-web-transport", "async-client", "async-wasm-client", "client-core"]
client-core = ["jsonrpsee-core/client"]
server = ["jsonrpsee-server", "server-core", "jsonrpsee-types"]
server-core = ["jsonrpsee-core/server"]
full = ["client", "server", "macros"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
