[package]
name = "jsonrpsee-proc-macros"
description = "Procedueral macros for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["extra-traits", "full", "visit", "parsing", "printing", "clone-impls", "proc-macro"] }
proc-macro-crate = "3"
heck = "0.5.0"

[dev-dependencies]
jsonrpsee = { path = "../jsonrpsee", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
hyper = "1.3"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy"]}
futures-channel = { version = "0.3.14", default-features = false }
futures-util = { version = "0.3.14", default-features = false }
serde_json = "1"
serde = "1"
trybuild = "1.0.97"
tokio = { version = "1.23.1", features = ["rt", "macros"] }
tower = { workspace = true }
