[package]
name = "jsonrpsee-proc-macros"
description = "Procedueral macros for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full", "visit", "parsing", "printing", "clone-impls", "proc-macro"] }
proc-macro-crate = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
jsonrpsee = { path = "../jsonrpsee", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client", "client-legacy"]}
futures-channel = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
trybuild = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tower = { workspace = true }
